--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,9 +27,8 @@ build:
 
 requirements:
   build:
-    - go 1.8.*  # [not win]
+    - {{ compiler('go') }}  # [not win]
     - make  # [not win]
-    - toolchain  # [not win]
   run:
     - terraform >=0.10
 
