--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,1 +1,14 @@
-{}
+build_number_decrement:
+- '0'
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
+docker_image:
+- condaforge/linux-anvil
+go_compiler:
+- go-nocgo
+goarch:
+- amd64
+goos:
+- linux
