--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,5 +1,19 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+build_number_decrement:
+- '0'
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
+docker_image:
+- condaforge/linux-anvil
+go_compiler:
+- go-nocgo
+goarch:
+- amd64
+goos:
+- darwin
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
