--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,6 +3,7 @@
 {% set version = "1.3.0" %}
 
 {% set name = goname.split('/')[-1] %}
+{% set pkg_src = ('gopath/src/'+goname).replace("/",os.sep) %}
 
 {% set x4_plugin = name + '_v' + version + "_x4" %}
 
@@ -11,12 +12,14 @@ package:
   version: {{ version }}
 
 source:
-  url: https://{{ goname }}/archive/v{{ version }}.tar.gz
-  sha256: bad830ecbb505a5a66b9bfc3284be52029fe7e94153e7019e59e6d01ea3c2091
+  - folder:  {{ pkg_src }}
+    url: https://{{ goname }}/archive/v{{ version }}.tar.gz
+    sha256: bad830ecbb505a5a66b9bfc3284be52029fe7e94153e7019e59e6d01ea3c2091
 
 build:
   number: 1001
   script:
+    - pushd {{ pkg_src }}
     - go build -v -o {{ target_gobin }}{{ x4_plugin }}{{ target_goexe }}
 
 requirements:
@@ -45,7 +48,7 @@ test:
 about:
   home: https://www.terraform.io
   license: MPL-2.0
-  license_file: LICENSE
+  license_file: {{ pkg_src }}/LICENSE
   summary: The Terraform 1&1 provider
   doc_url: https://www.terraform.io/docs/providers/{{ provider|lower }}/index.html
   dev_url: https://github.com/terraform-providers/{{ name }}
